@@ -30,6 +30,7 @@ Wed Dec 18 2013 || supercharger live: Mitchell, SD
 Mon Dec 16 2013 || supercharger added: St Augustine, FL
 Mon Dec 16 2013 || supercharger added: Santee, SC
 Sat Dec 14 2013 || supercharger added: Hagerstown, MD
+Sat Dec 14 2013 || supercharger live: four in Germany
 Fri Dec 13 2013 || supercharger added: Highland Park, IL
 Fri Dec 13 2013 || supercharger added: Kingman, AZ
 Fri Dec 13 2013 || supercharger live:  Lully, Switzerland
@@ -63,4 +64,4 @@ Sun Nov 24 2013 || supercharger added: Mishawaka, IN
 Wed Nov 20 2013 || supercharger added: Huntsville, TX
 Thu Nov 14 2013 || supercharger added: Quartzsite, AZ
 Wed Nov 13 2013 || supercharger added: Corsicana, TX
-Say Sep 28 2013 || supercharger live: all six in Norway
+Say Sep 28 2013 || supercharger live: six in Norway
